--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,12 +1,19 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.6.0
+astunparse==1.6.3
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 earthengine-api==1.1.2
 exceptiongroup==1.2.2
 fastapi==0.115.0
+flatbuffers==24.3.25
+fonttools==4.54.1
+gast==0.6.0
 google-api-core==2.20.0
 google-api-python-client==2.147.0
 google-auth==2.35.0
@@ -14,29 +21,66 @@ google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
 google-cloud-storage==2.18.2
 google-crc32c==1.6.0
+google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.65.0
+grpcio==1.66.2
 h11==0.14.0
+h5py==3.12.1
 httplib2==0.22.0
 idna==3.10
-numpy==2.0.2
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+joblib==1.4.2
+keras==3.6.0
+kiwisolver==1.4.7
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+numpy==1.26.4
+opencv-python==4.10.0.84
+opt_einsum==3.4.0
+optree==0.13.0
+packaging==24.1
 pandas==2.2.3
+pillow==10.4.0
 proto-plus==1.24.0
-protobuf==5.28.2
+protobuf==4.25.5
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.12
 pytz==2024.2
 requests==2.32.3
+rich==13.9.2
 rsa==4.9
+scikit-learn==1.5.2
+scipy==1.13.1
+seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
 starlette==0.38.6
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
+threadpoolctl==3.5.0
 typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
 uvicorn==0.31.0
+Werkzeug==3.0.4
+wrapt==1.16.0
+zipp==3.20.2
