--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,18 +1,30 @@
 absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.9
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.0
 astunparse==1.6.3
+async-timeout==4.0.3
+attrs==24.2.0
+beautifulsoup4==4.12.3
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.3.0
 cycler==0.12.1
+dataclasses-json==0.6.7
+Deprecated==1.2.14
+dirtyjson==1.0.8
+distro==1.9.0
 earthengine-api==1.1.2
 exceptiongroup==1.2.2
 fastapi==0.115.0
 flatbuffers==24.3.25
 fonttools==4.54.1
+frozenlist==1.4.1
+fsspec==2024.9.0
 gast==0.6.0
 google-api-core==2.20.0
 google-api-python-client==2.147.0
@@ -24,25 +36,51 @@ google-crc32c==1.6.0
 google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.65.0
+greenlet==3.1.1
 grpcio==1.66.2
 h11==0.14.0
 h5py==3.12.1
+httpcore==1.0.6
 httplib2==0.22.0
+httpx==0.27.2
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+jiter==0.5.0
 joblib==1.4.2
 keras==3.6.0
 kiwisolver==1.4.7
 libclang==18.1.1
+llama-cloud==0.1.2
+llama-index==0.11.16
+llama-index-agent-openai==0.3.4
+llama-index-cli==0.3.1
+llama-index-core==0.11.16
+llama-index-embeddings-openai==0.2.5
+llama-index-indices-managed-llama-cloud==0.4.0
+llama-index-legacy==0.9.48.post3
+llama-index-llms-openai==0.2.11
+llama-index-multi-modal-llms-openai==0.2.2
+llama-index-program-openai==0.2.0
+llama-index-question-gen-openai==0.2.0
+llama-index-readers-file==0.2.2
+llama-index-readers-llama-parse==0.3.0
+llama-parse==0.5.7
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 matplotlib==3.9.2
 mdurl==0.1.2
 ml-dtypes==0.4.1
+multidict==6.1.0
+mypy-extensions==1.0.0
 namex==0.0.8
+nest-asyncio==1.6.0
+networkx==3.2.1
+nltk==3.9.1
 numpy==1.26.4
+openai==1.51.0
 opencv-python==4.10.0.84
 opt_einsum==3.4.0
 optree==0.13.0
@@ -57,10 +95,13 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 pyparsing==3.1.4
+pypdf==4.3.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.12
 pytz==2024.2
+PyYAML==6.0.2
+regex==2024.9.11
 requests==2.32.3
 rich==13.9.2
 rsa==4.9
@@ -69,13 +110,20 @@ scipy==1.13.1
 seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.35
 starlette==0.38.6
+striprtf==0.0.26
+tenacity==8.5.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 threadpoolctl==3.5.0
+tiktoken==0.8.0
+tqdm==4.66.5
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
@@ -83,4 +131,5 @@ urllib3==2.2.3
 uvicorn==0.31.0
 Werkzeug==3.0.4
 wrapt==1.16.0
+yarl==1.13.1
 zipp==3.20.2
